# OpusCodec

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
cmake/: OpusCodecConfig.cmake.in
include/OpusCodec/: OpusCodec.h  OpusFactory.h
src/: CMakeLists.txt  OpusCodec.cpp  OpusFactory.cpp  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h
